--- a/src/STYLES/_min_width_896px.scss
+++ b/src/STYLES/_min_width_896px.scss
@@ -35,7 +35,7 @@
         left: 130px;
     }
 
-    iframe{
-        height: 80vh;
+    .bio .text-container{
+        padding-top: 90px;
     }
 }
