--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -49,8 +49,6 @@
 .bio-img-container{
     width: 40%;
     img{
-        margin: 40px auto;
-        // width: 80%;
         height: auto;
         border-radius:10px 50% 10px 50%;
     }
@@ -61,7 +59,7 @@
     box-sizing: border-box;
     width: 60%;
     height: auto;
-    padding: 30px 0 30px 30px;
+    // padding: 30px 0 30px 30px;
     line-height: 40px;
 }
 
@@ -73,26 +71,20 @@
     margin: 0;
     text-align: center;
     color: white;
-    // padding-left: 5em;
 }
 
 .project-div{
     display: block;
-    padding: 0 5em;
     .video-container{
-        padding-top: 0;
         width: 50%;
+        margin: 0 auto;
         iframe{
-            height: 80vh;
-            width: 190%;
-            margin: 0 0 0 20px;
+            width: 100%;
         }
     }
     .text-container{
         width: 100%;
-        padding: 40px 10px 0 30px;
         text-align: center;
-        line-height: 20px;
         .text{
             padding: 5px 10px;
             width: auto;
@@ -128,9 +120,8 @@
         }
         .codepen-div{
             width: 30%;
-            height:30vh;
-            max-height: 100%;
-            margin-right: 30px;
+            height:250px;
+            margin-right: 20px;
             margin-top: 30px;
             &:hover img{
                 opacity: 0.3;
@@ -142,7 +133,7 @@
             }
             .middle-spot {
                 position: relative;
-                top: -185px;
+                top: -165px;
                 left: 110px;
                 opacity: 0;
                 width: 100px;
