--- a/src/STYLES/_min_width_1024px.scss
+++ b/src/STYLES/_min_width_1024px.scss
@@ -1,7 +1,9 @@
+/* iPad Air 1 & 2 => 1024 x 768 # Horizontal */
 @media only screen and (min-width: 1024px) and (height:768px){
     .light-buttons{
         .light-off{
             width: 1160px;
+            height: 1700px;
         }
     }
 
