changes styling of light-off for min_width_375px.scss

--- a/src/STYLES/_min_width_375px.scss
+++ b/src/STYLES/_min_width_375px.scss
@@ -5,7 +5,7 @@
 @media only screen and (min-width: 375px){
     .light-buttons{
       .light-off{
-         height: 2250px;
+         width: 1100px;
       }
     }
 
@@ -31,7 +31,7 @@
 @media only screen and (min-width: 375px) and (height: 812px){
   .light-buttons{
     .light-off{
-       height: 2750px;
+       height: 2400px;
     }
   }
 }
