deletes styling for min_width_500px.scss

--- a/src/STYLES/_min_width_500px.scss
+++ b/src/STYLES/_min_width_500px.scss
@@ -1,18 +1,12 @@
 /* iPhone 5/SE => 568 x 320 # Horizontal done
    iPad Touch =>  568 x 320 # Horizontal done*/
 @media only screen and (min-width: 500px){
-    .light-buttons{
-      .light-off{
-        width: 1350px;
-      }
-    }
+    // .postits{
+    //   top:850px;
+    // }
 
-    .postits{
-      top:850px;
-    }
-
-    .awssld, .bio-card, .contact-card{
-      top: 950px;
-      left: 165px;
-    }
+    // .awssld, .bio-card, .contact-card{
+    //   top: 950px;
+    //   left: 165px;
+    // }
 }
