changes styling of light-off for min_width_510px.scss

--- a/src/STYLES/_min_width_510px.scss
+++ b/src/STYLES/_min_width_510px.scss
@@ -1,7 +1,9 @@
+/* iPhone 5/SE => 568 x 320 # Horizontal done
+   iPad Touch =>  568 x 320 # Horizontal done*/
 @media only screen and (min-width: 510px){
     .light-buttons{
         .light-off{
-            height: 2100px;
+            height: 1450px;
         }
     }
 
