--- a/src/STYLES/_min_width_760px.scss
+++ b/src/STYLES/_min_width_760px.scss
@@ -2,6 +2,11 @@
    iPad Mini => 768 x 1024 # Vertical done,
    iPad Air 1 & 2 => 768 x 1024  # Vertical done*/
 @media only screen and (min-width: 760px){
+    .light-buttons{
+        .light-off{
+            height: 1550px;
+        }
+    }
     .myname{
         left: 390px;
     }
