--- a/src/STYLES/style.css
+++ b/src/STYLES/style.css
@@ -2359,8 +2359,8 @@
    iPad Touch => 320 x 568  # Verrical  done*/
 @media only screen and (min-width: 280px) {
   .light-buttons .light-off {
-    width: 1270px;
-    height: 2260px;
+    width: 1150px;
+    height: 2050px;
   }
   .light-buttons .light-off button, .light-buttons .light-on button {
     left: 500px;
@@ -2503,8 +2503,8 @@
    Samsung Galaxy S8 / S8+ => 360 x 740 # Vertical done */
 @media only screen and (min-width: 350px) {
   .light-buttons .light-off {
-    width: 1240px;
-    height: 2210px;
+    width: 1100px;
+    height: 1960px;
   }
   .floor {
     width: 1100px;
@@ -2528,7 +2528,7 @@
 
 @media only screen and (min-width: 350px) and (height: 740px) {
   .light-buttons .light-off {
-    height: 2550px;
+    height: 2300px;
   }
 }
 
@@ -2538,7 +2538,7 @@
    Galaxy s7 => 360 x 640  # Vertical done*/
 @media only screen and (min-width: 375px) {
   .light-buttons .light-off {
-    height: 2250px;
+    width: 1100px;
   }
   .postits {
     top: 700px;
@@ -2558,7 +2558,7 @@
 
 @media only screen and (min-width: 375px) and (height: 812px) {
   .light-buttons .light-off {
-    height: 2750px;
+    height: 2400px;
   }
 }
 
@@ -2566,8 +2566,7 @@
    Pixel 2 XL => 411 x 823 # Vertical done */
 @media screen and (min-width: 411px) {
   .light-buttons .light-off {
-    width: 1245px;
-    height: 2500px;
+    height: 2205px;
   }
   .postits {
     top: 700px;
@@ -2579,7 +2578,7 @@
 
 @media screen and (min-width: 411px) and (height: 731px) {
   .light-buttons .light-off {
-    height: 2250px;
+    height: 2000px;
   }
 }
 
@@ -2587,7 +2586,7 @@
    iPhone XR => 414 x 896 # Vertical done */
 @media screen and (min-width: 414px) {
   .light-buttons .light-off {
-    height: 2250px;
+    height: 2000px;
   }
   .postits {
     top: 700px;
@@ -2602,28 +2601,17 @@
 
 @media screen and (min-width: 414px) and (height: 896px) {
   .light-buttons .light-off {
-    height: 2700px;
+    height: 2400px;
   }
 }
 
 /* iPhone 5/SE => 568 x 320 # Horizontal done
    iPad Touch =>  568 x 320 # Horizontal done*/
-@media only screen and (min-width: 500px) {
-  .light-buttons .light-off {
-    width: 1350px;
-  }
-  .postits {
-    top: 850px;
-  }
-  .awssld, .bio-card, .contact-card {
-    top: 950px;
-    left: 165px;
-  }
-}
-
+/* iPhone 5/SE => 568 x 320 # Horizontal done
+   iPad Touch =>  568 x 320 # Horizontal done*/
 @media only screen and (min-width: 510px) {
   .light-buttons .light-off {
-    height: 2100px;
+    height: 1450px;
   }
   .postits {
     left: -350px;
@@ -2682,8 +2670,7 @@
    iPhone 6/7/8 => 667 x 375 # Horizontal done*/
 @media only screen and (min-width: 600px) {
   .light-buttons .light-off {
-    width: 1350px;
-    height: 2100px;
+    height: 1400px;
   }
   .postits {
     top: 700px;
@@ -2724,6 +2711,7 @@
 @media only screen and (min-width: 730px) {
   .light-buttons .light-off {
     width: 1150px;
+    height: 1450px;
   }
   .myname {
     left: 400px;
@@ -2823,6 +2811,9 @@
 /* Samsung Galaxy S8 / S8+ => 740 x 360 # Horizontal done,
     Samsung Galaxy S9 / S9+ => 740 x 360 # Horizontal done*/
 @media only screen and (min-width: 740px) {
+  .light-buttons .light-off {
+    height: 1370px;
+  }
   .postits {
     left: -50px;
     top: 700px;
@@ -2874,6 +2865,9 @@
    iPad Mini => 768 x 1024 # Vertical done,
    iPad Air 1 & 2 => 768 x 1024  # Vertical done*/
 @media only screen and (min-width: 760px) {
+  .light-buttons .light-off {
+    height: 1550px;
+  }
   .myname {
     left: 390px;
   }
@@ -2935,6 +2929,7 @@
 @media only screen and (min-width: 800px) {
   .light-buttons .light-off {
     width: 1200px;
+    height: 1950px;
   }
   .postits {
     left: -270px;
@@ -3002,6 +2997,9 @@
    iPhone X => 812 x 375 # Horizontal done,
    Pixel 2 XL => 823 x 411 # Horizontal done*/
 @media only screen and (min-width: 812px) {
+  .light-buttons .light-off {
+    height: 1400px;
+  }
   .postits {
     left: -20px;
     top: 720px;
@@ -3100,9 +3098,11 @@
   }
 }
 
-/* iPad Pro => 1024 x 1366 # Vertical done,
-   iPad Air 1 & 2 => 1024 x 768 # Horizontal*/
+/* iPad Pro => 1024 x 1366 # Vertical done */
 @media only screen and (min-width: 1000px) {
+  .light-buttons .light-off {
+    height: 1600px;
+  }
   .postits {
     left: -170px;
     top: 700px;
@@ -3158,9 +3158,11 @@
   }
 }
 
+/* iPad Air 1 & 2 => 1024 x 768 # Horizontal */
 @media only screen and (min-width: 1024px) and (height: 768px) {
   .light-buttons .light-off {
     width: 1160px;
+    height: 1700px;
   }
   .floor {
     width: 1160px;
@@ -3258,6 +3260,7 @@
 @media only screen and (min-width: 1366px) {
   .light-buttons .light-off {
     width: 1366px;
+    height: 2050px;
   }
   .floor {
     width: 1366px;
@@ -3321,6 +3324,7 @@
 @media only screen and (min-width: 1400px) {
   .light-buttons .light-off {
     width: 1450px;
+    height: 1800px;
   }
   .floor {
     width: 1450px;
