changes styling of middle-spot for min_width_1280px.scss

--- a/src/STYLES/_min_width_1280px.scss
+++ b/src/STYLES/_min_width_1280px.scss
@@ -36,8 +36,15 @@
         line-height: 40px;
     }
 
-    .codepen-div{
-        width: 30%;
+    .project-div{
+        .codepen{
+            .codepen-div{
+                width: 30%;
+                .middle-spot{
+                    left: 110px;
+                }
+            }
+        }
     }
 
     .back-end{
