changes styling of middle-spot for min_width_1366px.scss

--- a/src/STYLES/_min_width_1366px.scss
+++ b/src/STYLES/_min_width_1366px.scss
@@ -58,6 +58,10 @@
             padding-left: 100px;
             .codepen-div{
                 height: 370px;
+                .middle-spot{
+                    top: -210px;
+                    left: 100px;
+                }
             }
         }
     }
