changes styling of middle-spot for min_width_1400px.scss

--- a/src/STYLES/_min_width_1400px.scss
+++ b/src/STYLES/_min_width_1400px.scss
@@ -57,6 +57,9 @@
         .codepen{
             .codepen-div{
                 height: 300px;
+                .middle-spot{
+                    top: -180px;
+                }
             }
         }
     }
