--- a/src/STYLES/_min_width_2500px.scss
+++ b/src/STYLES/_min_width_2500px.scss
@@ -537,6 +537,15 @@
         .codepen{
             .codepen-div{
                 height: 550px;
+                .middle-spot{
+                    top: -310px;
+                    left: 160px;
+                    width: 250px;
+                    height: 100px;
+                    font-size: 40px;
+                    vertical-align: middle;
+                    line-height: 80px;
+                }
             }
         }
     }
