--- a/src/STYLES/_min_width_2800px.scss
+++ b/src/STYLES/_min_width_2800px.scss
@@ -163,6 +163,17 @@
     .project-div{
         .codepen{
             padding-left: 140px;
+            .codepen-div{
+                .middle-spot{
+                    top: -300px;
+                    left: 125px;
+                    width: 300px;
+                    height: 100px;
+                    font-size: 40px;
+                    vertical-align: middle;
+                    line-height: 80px;
+                }
+            }
         }
         .text-container{
             padding-top:50px;
