--- a/src/STYLES/_min_width_5000px.scss
+++ b/src/STYLES/_min_width_5000px.scss
@@ -226,6 +226,15 @@
             padding-left:400px;
             .codepen-div {
                 height: 950px;
+                .middle-spot{
+                    top: -500px;
+                    left: 300px;
+                    width: 350px;
+                    height: 100px;
+                    font-size: 40px;
+                    vertical-align: middle;
+                    line-height: 80px;
+                }
             }
         }
     }
