changes styling of middle-spot for min_width_510px.scss

--- a/src/STYLES/_min_width_510px.scss
+++ b/src/STYLES/_min_width_510px.scss
@@ -53,6 +53,10 @@
         .codepen{
             .codepen-div{
                 height: 200px;
+                .middle-spot{
+                    top: -130px;
+                    left: 70px;
+                }
             }
         }
         .text-container{
