changes styling of middle-spot for min_width_600px.scss

--- a/src/STYLES/_min_width_600px.scss
+++ b/src/STYLES/_min_width_600px.scss
@@ -33,8 +33,13 @@
         .text-container{
             line-height: 15px;
         }
-        .codepen-div{
-            height: 200px;
+        .codepen{
+            .codepen-div{
+                height: 200px;
+                .middle-spot{
+                    left: 80px;
+                }
+            }
         }
     }
 
