--- a/src/STYLES/_min_width_730px.scss
+++ b/src/STYLES/_min_width_730px.scss
@@ -108,12 +108,14 @@
     }
 
     .project-div {
-        .codepen-div{
-            width: 28%;
-            height: 250px;
-            .middle-spot{
-            left:60px;
-            top: -150px;
+        .codepen{
+            .codepen-div{
+                width: 28%;
+                height: 250px;
+                .middle-spot{
+                left:50px;
+                top: -150px;
+                }
             }
         }
         .text-container{
