changes styling of middle-spot for min_width_740px.scss

--- a/src/STYLES/_min_width_740px.scss
+++ b/src/STYLES/_min_width_740px.scss
@@ -56,6 +56,13 @@
         .text-container{
             line-height: 20px;
         }
+        .codepen{
+            .codepen-div{
+                .middle-spot{
+                    left: 70px;
+                }
+            }
+        }
     }
 
     .x{
