changes styling of middle-spot for min_width_800px.scss

--- a/src/STYLES/_min_width_800px.scss
+++ b/src/STYLES/_min_width_800px.scss
@@ -56,6 +56,7 @@
                 height: 400px;
                 .middle-spot{
                     left: 100px;
+                    top:  -210px;
                 }
             }
         }
