changes styling of middle-spot for min_width_812px.scss

--- a/src/STYLES/_min_width_812px.scss
+++ b/src/STYLES/_min_width_812px.scss
@@ -61,6 +61,10 @@
             .codepen-div{
                 width: 29%;
                 height: 200px;
+                .middle-spot{
+                    left: 70px;
+                    top: -130px;
+                }
             }
         }
         .text-container{
