changes styling of bio for different screen sizes

--- a/src/STYLES/_min_width_1000px.scss
+++ b/src/STYLES/_min_width_1000px.scss
@@ -41,6 +41,14 @@
         height: 750px !important;
     }
 
+    .bio{
+        .bio-img-container {
+            img{
+                margin-top: 130px;
+            }
+        }
+    }
+
     .project-div{
         .codepen{
             padding-left: 50px;
