--- a/src/STYLES/_min_width_280px.scss
+++ b/src/STYLES/_min_width_280px.scss
@@ -124,15 +124,11 @@
     }
 
     .bio{
-        padding: 30px;
-        .text-container{
-            padding-top: 100px;
+        .bio-img-container{
+            img{
+                margin-top: 180px;
+            }
         }
-    }
-
-    .bio-img-container img{
-        margin:150px auto;
-        width: 100%;
     }
 
     .x{
