--- a/src/STYLES/_min_width_2500px.scss
+++ b/src/STYLES/_min_width_2500px.scss
@@ -515,17 +515,16 @@
         height: 1400px !important;
     }
 
-    .bio .text-container{
-        padding-top: 255px;
-        line-height: 70px;
-    }
-
     .text{
         font-size: 40px;
     }
 
-    .bio-img-container img{
-        margin: 150px auto;
+    .bio{
+        .bio-img-container{
+            img{
+               margin-top: 150px;
+           }
+        }
     }
 
     .project-div{
