--- a/src/STYLES/_min_width_5000px.scss
+++ b/src/STYLES/_min_width_5000px.scss
@@ -198,21 +198,19 @@
         height: 2500px !important;
     }
 
-    .bio .text-container{
-        padding-top: 555px;
-        line-height: 100px;
-    }
-
-    .bio .text{
-        font-size: 70px;
+    .bio {
+        .bio-img-container {
+            img{
+                margin-top: 200px;
+            }
+        }
+        .text{
+            font-size: 70px;
+        }
     }
 
     .text{
         font-size: 60px;
-    }
-
-    .bio-img-container img{
-        margin: 180px auto;
     }
 
     .project-div{
