--- a/src/STYLES/_min_width_510px.scss
+++ b/src/STYLES/_min_width_510px.scss
@@ -40,13 +40,12 @@
       height: 600px !important;
     }
 
-    .bio-card .text-container{
-      line-height: normal;
-      padding-top: 50px;
-    }
-
-    .bio-img-container img{
-        margin-top: 30px;
+    .bio{
+        .bio-img-container{
+            img{
+                margin-top: 20px;
+            }
+        }
     }
 
     .project-div{
