--- a/src/STYLES/_min_width_600px.scss
+++ b/src/STYLES/_min_width_600px.scss
@@ -20,12 +20,12 @@
         height: 550px !important;
     }
 
-    .bio .text-container{
-        padding-top: 50px;
-    }
-
-    .bio-img-container img{
-        margin-top: 0;
+    .bio{
+        .bio-img-container{
+            img{
+                margin-top: 0;
+            }
+        }
     }
 
     .project-div{
