--- a/src/STYLES/_min_width_740px.scss
+++ b/src/STYLES/_min_width_740px.scss
@@ -44,12 +44,12 @@
         width: 1000px !important;
     }
 
-    .bio-img-container img{
-        margin-top: 0px;
-    }
-
-    .bio .text-container {
-        padding-top: 0px;
+    .bio{
+        .bio-img-container {
+            img{
+                margin-top: 0px;
+            }
+        }
     }
 
     .project-div{
