--- a/src/STYLES/_min_width_800px.scss
+++ b/src/STYLES/_min_width_800px.scss
@@ -44,8 +44,15 @@
         left: 50px;
     }
 
-    .bio-img-container img{
-        margin: 200px auto;
+    .bio{
+        .bio-img-container {
+            img{
+                margin-top: 200px;
+            }
+        }
+        .text-container{
+            line-height: 55px;
+        }
     }
 
     .project-div{
