--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -28,7 +28,6 @@
 .bio, .project-div{
     display: flex;
     justify-content: space-between;
-    margin: 0;
     padding: 30px;
     position: absolute;
 }
@@ -43,14 +42,27 @@
         text-decoration: none;
         color: black;
         font-weight: bold;
+        vertical-align: middle;
+    }
+}
+
+.bio{
+    .text-container{
+        padding: 10px;
+        height: auto;
+        margin: auto 5px;
+        vertical-align: middle;
     }
 }
 
 .bio-img-container{
     width: 40%;
+    height: 100%;
     img{
+        width: 100%;
         height: auto;
         border-radius:10px 50% 10px 50%;
+        margin: 0 5px;
     }
 }
 
@@ -59,8 +71,6 @@
     box-sizing: border-box;
     width: 60%;
     height: auto;
-    // padding: 30px 0 30px 30px;
-    line-height: 40px;
 }
 
 .text, .project-div h3{
