--- a/src/STYLES/_min_width_510px.scss
+++ b/src/STYLES/_min_width_510px.scss
@@ -63,6 +63,22 @@
         }
     }
 
+
+    .skill-slide{
+        .front-end{
+            padding-top: 50px;
+            img{
+                height: 100px;
+            }
+        }
+        .back-end{
+            padding-top: 100px;
+            img{
+                height: 100px;
+            }
+        }
+    }
+
     .x{
         left: 900px;
     }
