--- a/src/STYLES/_min_width_760px.scss
+++ b/src/STYLES/_min_width_760px.scss
@@ -67,6 +67,20 @@
         }
     }
 
+    .skill-slide{
+        .front-end{
+            margin-top: 30px;
+            img{
+                height: 130px;
+            }
+        }
+        .back-end{
+            img{
+                height: 150px;
+            }
+        }
+    }
+
     .x{
         left: 880px;
     }
