--- a/src/STYLES/_min_width_1000px.scss
+++ b/src/STYLES/_min_width_1000px.scss
@@ -61,12 +61,12 @@
         }
     }
 
-    .bio .text-container{
-        padding: 100px 0 20px 60px;
-    }
-
-    .bio-img-container img{
-        margin: 80px auto;
+    .skill-slide{
+        .front-end, .back-end{
+            img{
+                height: 150px;
+            }
+        }
     }
 
     .text-container{
