--- a/src/STYLES/_min_width_280px.scss
+++ b/src/STYLES/_min_width_280px.scss
@@ -153,9 +153,21 @@
         }
     }
 
-    .contact-div{
-      padding: 450px  100px;
+    .skill-slide{
+        .front-end{
+            padding: 80px 20px;
+            img{
+                width: 30%;
+            }
+        }
+        .back-end{
+            padding: 120px 20px;
+            img{
+                width: 35%;
+            }
+        }
     }
+
 }
 
 @media only screen and  (min-width: 280px) and (height: 653px){
