--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -163,8 +163,9 @@
 }
 
 .skill-slide{
+    margin: auto 0;
     h3{
-        padding-top: 60px;
+        padding: .5em 0 .5em 0;
         font-size: 50px;
         font-family: 'El Messiri', sans-serif;
         color: white;
