changes styling of bio for different screen sizes

--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -34,7 +34,9 @@
 
 .resume {
     width: 100px;
-    height: 50px;
+    height: auto;
+    border: none;
+    padding: 10px;
     // margin-left: 100px;
     border-radius: 90px;
     background: white;
