--- a/src/STYLES/_min_width_1280px.scss
+++ b/src/STYLES/_min_width_1280px.scss
@@ -28,12 +28,12 @@
         width: 1200px !important;
     }
 
-    .bio-img-container img{
-        margin-top: 30px;
-    }
-
-    .bio .text-container{
-        line-height: 40px;
+    .bio{
+        .bio-img-container{
+            img{
+                margin-top: 80px;
+            }
+        }
     }
 
     .project-div{
