changes styling of post_its for min_width_1400.scss

--- a/src/STYLES/_min_width_1400px.scss
+++ b/src/STYLES/_min_width_1400px.scss
@@ -17,28 +17,30 @@
     }
 
     .postits{
-        left: 0px;
-        top:850px;
+        left: 50px;
+        top:750px;
         p{
-            padding-top: 160px;
+            padding-top: 130px;
         }
         .post-it-1, .post-it-2, .post-it-3, .post-it-4{
-           width:350px;
-           height: 350px;
+           width:300px;
+           height: 300px;
            &:after{
-                width:350px;
-                height: 350px;
+                width:300px;
+                height: 300px;
             }
         }
         .post-it-2{
-            left: 800px;
+            left: 750px;
         }
         .post-it-3{
             top: 500px;
+            margin-bottom: 10px;
         }
         .post-it-4{
-            left: 800px;
+            left: 750px;
             top:500px;
+            margin-bottom: 10px;
         }
     }
 
