--- a/src/STYLES/_react_awesome_slider.scss
+++ b/src/STYLES/_react_awesome_slider.scss
@@ -6,12 +6,12 @@
     max-width: none !important;
 }
 
-.awssld__container, .bio, .contact-div, .skill-slide, .project-div{
+.awssld__container, .bio, .contact-card, .skill-slide, .project-div{
     width: 100% !important;
     height: 100% !important;
 }
 
-.awssld__content, .bio, .contact-div{
+.awssld__content, .bio, .contact-card{
     background-color: #2E9497 !important;
     border-radius: 15px;
 }
